<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/forgetpass_3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToOutline="true"
    android:background="#FFFFFF">

    <ImageButton
        android:id="@+id/button_back"
        android:layout_width="40dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="Back"
        android:src="@drawable/button_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/yummy_xin_c"
        android:layout_width="124dp"
        android:layout_height="24dp"
        android:layout_marginStart="152dp"
        android:layout_marginTop="64dp"
        android:gravity="center_vertical"
        android:lineSpacingExtra="5sp"
        android:text="@string/yummy_xin_c"
        android:textAppearance="@style/yummy_xin_c"
        app:layout_constraintStart_toStartOf="@+id/button_back"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/r_t_vui_khi"
        android:layout_width="128dp"
        android:layout_height="24dp"
        android:gravity="center_vertical"
        android:lineSpacingExtra="7sp"
        android:text="@string/r_t_vui_khi"
        android:textAppearance="@style/r_t_vui_khi"
        app:layout_constraintEnd_toEndOf="@+id/yummy_xin_c"
        app:layout_constraintStart_toStartOf="@+id/yummy_xin_c"
        app:layout_constraintTop_toBottomOf="@+id/yummy_xin_c"
        tools:layout_editor_absoluteY="83dp" />


    <TextView
        android:id="@+id/text_dangnhap"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_marginTop="68dp"
        android:gravity="center_vertical"
        android:lineSpacingExtra="5sp"
        android:paddingStart="10dp"
        android:text="@string/text_matkhau"
        android:textAppearance="@style/text_dangnhap"
        app:layout_constraintTop_toBottomOf="@+id/r_t_vui_khi"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/input_username"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/input_username"
        android:hint="••••••••••"
        android:textSize="12sp"
        android:paddingLeft="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_dangnhap" />

    <TextView
        android:id="@+id/text_matkhau"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:lineSpacingExtra="5sp"
        android:paddingStart="10dp"
        android:text="@string/text_nhapmkl2"
        android:textAppearance="@style/text_dangnhap"
        app:layout_constraintTop_toBottomOf="@+id/input_username"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/input_pass"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/input_username"
        android:hint="••••••••••"
        android:textSize="16sp"
        android:paddingLeft="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_matkhau" />

    <Button
        android:id="@+id/btn_xacnhan_new_pass"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="0dp"
        android:backgroundTint="@color/black"
        android:clipToOutline="true"
        android:text="Xác nhận"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_pass"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="-16dp" />
</androidx.constraintlayout.widget.ConstraintLayout>
