<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/forgetpass_1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToOutline="true"
    android:background="#FFFFFF">
    <ImageButton
        android:id="@+id/button_back"
        android:layout_width="40dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="Back"
        android:src="@drawable/button_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/yummy_xin_c"
        android:layout_width="124dp"
        android:layout_height="24dp"
        android:layout_marginStart="152dp"
        android:layout_marginTop="128dp"
        android:gravity="center_vertical"
        android:lineSpacingExtra="5sp"
        android:text="@string/yummy_xin_c"
        android:textAppearance="@style/yummy_xin_c"
        app:layout_constraintStart_toStartOf="@+id/button_back"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_quenmk"
        android:layout_width="159dp"
        android:layout_height="24dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:lineSpacingExtra="5sp"
        android:text="@string/text_quenmk"
        android:textAppearance="@style/text_quenmk"
        app:layout_constraintEnd_toEndOf="@+id/yummy_xin_c"
        app:layout_constraintStart_toStartOf="@+id/yummy_xin_c"
        app:layout_constraintTop_toBottomOf="@+id/yummy_xin_c" />

    <TextView
        android:id="@+id/text_dangnhap"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_marginTop="68dp"
        android:gravity="center_vertical"
        android:lineSpacingExtra="5sp"
        android:paddingStart="10dp"
        android:text="@string/text_dangnhap"
        android:textAppearance="@style/text_dangnhap"
        app:layout_constraintTop_toBottomOf="@+id/text_quenmk"
        tools:layout_editor_absoluteX="27dp" />

    <EditText
        android:id="@+id/input_username_quenmk"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/input_username"
        android:hint="Vd:Hoainam123"
        android:paddingLeft="10dp"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_dangnhap" />
    <Button
        android:id="@+id/btn_xacnhan_email"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="196dp"
        android:backgroundTint="@color/black"
        android:clipToOutline="true"
        android:text="Xác nhận"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_username_quenmk"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="22dp" />


</androidx.constraintlayout.widget.ConstraintLayout>