<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profile_homepage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToOutline="true"
    android:background="#FFFFFF">

    <TextView
        android:id="@+id/text_trangcanhan"
        android:layout_width="121dp"
        android:layout_height="21dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="72dp"
        android:gravity="center_vertical"
        android:text="@string/text_trangcanhan"
        android:textAppearance="@style/text_trangcanhan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="24dp"
        android:background="@drawable/image_profile"
        app:layout_constraintEnd_toEndOf="@+id/text_trangcanhan"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/text_trangcanhan"
        app:layout_constraintTop_toBottomOf="@+id/text_trangcanhan" />


    <TextView
        android:id="@+id/text_username_profile"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="120dp"
        android:gravity="center_vertical"
        android:lineSpacingExtra="-5sp"
        android:text="@string/text_username_profile"
        android:textAppearance="@style/text_username_profile"
        app:layout_constraintStart_toEndOf="@+id/image"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="28dp"
        android:layout_marginTop="104dp"
        android:background="@drawable/button_edit_ic"
        android:clipToOutline="true"
        android:contentDescription="btn_edit_profile"
        android:src="@drawable/ic_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.433"
        app:layout_constraintStart_toEndOf="@+id/text_username_profile"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_email_profile"
        android:layout_width="201dp"
        android:layout_height="31dp"
        android:layout_marginTop="168dp"
        android:gravity="center_vertical"
        android:lineSpacingExtra="-1sp"
        android:text="@string/text_email_profile"
        android:textAppearance="@style/text_email_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.244"
        app:layout_constraintStart_toEndOf="@+id/image"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profile_thucpham"
        android:layout_width="371dp"
        android:layout_height="56dp"
        android:layout_marginTop="92dp"
        android:background="@drawable/border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_email_profile">

        <TextView
            android:id="@+id/text_thucpham"
            android:layout_width="200dp"
            android:layout_height="17dp"
            android:gravity="center_horizontal|top"
            android:text="@string/text_favorite_profile"
            android:textAppearance="@style/text_favorite_profile"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.126"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profile_favorite"
        android:layout_width="371dp"
        android:layout_height="56dp"
        android:layout_marginTop="152dp"
        android:background="@drawable/border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_email_profile">

        <TextView
            android:id="@+id/text_favorite_profile"
            android:layout_width="200dp"
            android:layout_height="17dp"
            android:gravity="center_horizontal|top"
            android:text="@string/text_favorite_profile"
            android:textAppearance="@style/text_favorite_profile"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.126"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profile_yourrecipes"
        android:layout_width="371dp"
        android:layout_height="56dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_favorite">

        <TextView
            android:id="@+id/text_yourrecipes_profile"
            android:layout_width="200dp"
            android:layout_height="17dp"
            android:gravity="center_horizontal|top"
            android:text="@string/text_yourrecipes_profile"
            android:textAppearance="@style/text_favorite_profile"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.093"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.512" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/button_logout"
        android:layout_width="342dp"
        android:layout_height="48dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="148dp"
        android:background="@drawable/button"
        android:backgroundTint="@color/white"
        android:clipToOutline="true"
        android:contentDescription="Đăng xuất"
        android:text="Đăng xuất"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_yourrecipes"
        app:layout_constraintVertical_bias="1.0">

    </Button>


</androidx.constraintlayout.widget.ConstraintLayout>